# nocturne

./: .coverage  .gitignore  LICENSE  README.md  config.example.yaml  nocturne.yaml.local-template  pyproject.toml  soul.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml
Defizoo/reviewer/: README.md
Defizoo/reviewer/src/skill/: SKILL.md
Defizoo/reviewer/src/skill/references/: style.md
docs/: DEPLOYMENT.md  GETTING_STARTED.md
nocturne/: _gh_retry.py  _logging.py  _opencode_check.py  _sandbox.py  _schema.sql  _systemd.py  askflow.py  cli.py  config.py  daemon.py  daemon_recovery.py  discord_bot.py  gitwork.py  guardrails.py  healthcheck.py  models.py  opencode_driver.py  orchestrator.py  reactions.py  reporter.py  review.py  setup_wizard.py  skills.py  store.py  triage.py  verifier.py
nocturne/_hooks/: pre-push
nocturne/prompts/: render.py  review_invocation.md.jinja2  review_invocation_default.md.jinja2  task.md.jinja2  triage_rubric.md
nocturne/sources/: github_issues.py  github_pr.py
nocturne/templates/: report.md.jinja2
scripts/: bootstrap_sandbox.sh  check_opencode_provider.sh  flip_to_public.sh  install-systemd.sh  m1_acceptance.sh  m2_acceptance.sh  m3_acceptance.sh  m4_acceptance.sh  m5_acceptance.sh  setup.sh  uninstall-systemd.sh
scripts/systemd/: nocturne.service
someone/empty-repo/: README.md
tests/: conftest.py  discord_e2e_harness.py  fakes.py  m1_acceptance.py  m2_acceptance.py  m3_acceptance.py  m4_acceptance.py  m5_acceptance.py  test_askflow.py  test_cli.py  test_config.py  test_daemon.py  test_daemon_recovery.py  test_discord_bot.py  test_fakes.py  test_github_issues.py  test_github_pr.py  test_gitwork.py  test_guardrails.py  test_healthcheck.py  test_logging.py  test_models.py  test_opencode_driver.py  test_opencode_provider.py  test_orchestrator.py  test_prompts.py  test_reactions.py  test_reporter.py  test_review.py  test_sandbox.py  test_setup.py  test_skills.py  test_store.py  test_systemd.py  test_triage.py  test_verifier.py
